# collab_orb_slam2

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  bs.sh  build.sh  corb_run.md
Examples/ROS/compression/: CMakeLists.txt  KittiAgentDepth  KittiAgentMono  KittiAgentStereo  KittiServerDepth  KittiServerMono  KittiServerStereo  office_calibration.yaml
Examples/ROS/compression/msg/: msg_features.msg
Examples/ROS/compression/msg_gen/cpp/include/compression/: msg_features.h
Examples/ROS/compression/msg_gen/lisp/: _package_msg_features.lisp  msg_features.lisp
Examples/ROS/compression/src/compression/: KittiAgentDepth.cpp  KittiAgentMono.cpp  KittiAgentStereo.cpp  KittiServerDepth.cpp  KittiServerMono.cpp  KittiServerStereo.cpp
Examples/ROS/compression/src/compression/msg/: _msg_features.py
include/: ChosenVocabulary.h  Frame.h  KeyFrame.h  KeyFrameDatabase.h  LoopClosing.h  Map.h  MapDatabase.h  MapMerging.h  MapPoint.h  ORBVocabulary.h  Sim3Solver.h  SlamConfig.h  System.h  Tracking.h
rosbuild_ws/: setup.sh
src/: CMakeCache.txt  Frame.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Makefile  Map.cc  MapDatabase.cc  MapDrawer.cc  MapMerging.cc  MapPoint.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  cmake_install.cmake
src/protobuf/: agent_brain.proto  map_segment.proto
